# template-filler

./: .gitignore  Cargo.toml  LICENSE-MIT  NEWS.md  README.md  build.rs
data/resources/: resources.gresource.xml
data/resources/ui/: shortcuts.ui  variable_name_cell.blp  variable_row.blp  variable_value_cell.blp  variables_view.blp  window.blp
src/: application.rs  config.rs  document.rs  main.rs  variable.rs  widgets.rs  window.rs
src/widgets/: variable_name_cell.rs  variable_row.rs  variable_value_cell.rs  variables_view.rs
